# codex-switcher

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
public/: bg.avif  site.webmanifest
scripts/: build-windows.mjs  pnpm-run.mjs  run-lan.mjs  script-utils.mjs  tauri-build.mjs  windows-rust-env.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/linux/: codex-switcher.desktop.hbs
src-tauri/src/: lib.rs  main.rs  platform.rs  types.rs  web.rs
src-tauri/src/api/: mod.rs  usage.rs
src-tauri/src/auth/: mod.rs  oauth_server.rs  storage.rs  switcher.rs  token_refresh.rs
src-tauri/src/commands/: account.rs  mod.rs  oauth.rs  process.rs  usage.rs
src/components/: AccountCard.tsx  AddAccountModal.tsx  AttentionDrawer.tsx  ConfigModal.tsx  DashboardSidebar.tsx  DashboardWorkspace.tsx  NotificationCenter.tsx  ToastHost.tsx  UpdateChecker.tsx  UsageBar.tsx  index.ts
src/hooks/: useAccounts.ts
src/lib/: platform.ts
src/types/: index.ts
