[package]
name = "codex-switcher"
version = "1.1.0"
description = "A multi-account manager for Codex CLI"
authors = ["ChloeVPin"]
edition = "2021"
default-run = "codex-switcher"

[lib]
name = "codex_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[dependencies]
tauri = { version = "2.10", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tiny_http = "0.12"
webbrowser = "1"
tao = "0.34.6"
wry = "0.54.3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
thiserror = "2"
anyhow = "1"
urlencoding = "2"
futures = "0.3"
url = "2"
flate2 = "1"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
include_dir = "0.7"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }
